{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 63,
  "lineage": "4a04770f-85e7-b931-1a82-df226078a8c4",
  "resources": [
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0472fda5871377092",
            "arn": "arn:aws:ec2:us-east-1:998230061098:elastic-ip/eipalloc-0472fda5871377092",
            "association_id": "eipassoc-0a774846e8af99dc1",
            "domain": "vpc",
            "id": "eipalloc-0472fda5871377092",
            "network_border_group": "us-east-1",
            "network_interface": "eni-010257dbedde91c46",
            "private_dns": "ip-10-0-1-67.ec2.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-35-170-117-108.compute-1.amazonaws.com",
            "public_ip": "35.170.117.108",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "eipalloc-0472fda5871377092",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0472fda5871377092",
            "association_id": "eipassoc-0a774846e8af99dc1",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-055b8768fb1ce5ccc",
            "network_interface_id": "eni-010257dbedde91c46",
            "private_ip": "10.0.1.67",
            "public_ip": "35.170.117.108",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0832a4f4c00fdb306",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "nat-055b8768fb1ce5ccc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-02809d24f984b9119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02809d24f984b9119",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-02809d24f984b9119",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-0af03c61f5c05fc6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af03c61f5c05fc6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-4"
            },
            "tags_all": {
              "Name": "private-4"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-0af03c61f5c05fc6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-069247cb9dfeccb18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069247cb9dfeccb18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-5"
            },
            "tags_all": {
              "Name": "private-5"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-069247cb9dfeccb18",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-079531611573aad7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079531611573aad7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-6"
            },
            "tags_all": {
              "Name": "private-6"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-079531611573aad7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-0539e5d1233007d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0539e5d1233007d1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-7"
            },
            "tags_all": {
              "Name": "private-7"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-0539e5d1233007d1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-8",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-021a9cf5949681781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021a9cf5949681781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-8"
            },
            "tags_all": {
              "Name": "private-8"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-021a9cf5949681781",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-0832a4f4c00fdb306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0832a4f4c00fdb306",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-0832a4f4c00fdb306",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:subnet/subnet-0ffd901c71aa53b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffd901c71aa53b08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "998230061098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "subnet-0ffd901c71aa53b08",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:route-table/rtb-0b4eff9ede2b32787",
            "id": "rtb-0b4eff9ede2b32787",
            "owner_id": "998230061098",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c4bc4dc00bda581",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "rtb-0b4eff9ede2b32787",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d8574b9321cae8c",
            "region": "us-east-1",
            "route_table_id": "rtb-0b4eff9ede2b32787",
            "subnet_id": "subnet-0832a4f4c00fdb306"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "rtbassoc-07d8574b9321cae8c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.route_table.aws_route_table.public",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa2f8f600c8c7fb",
            "region": "us-east-1",
            "route_table_id": "rtb-0b4eff9ede2b32787",
            "subnet_id": "subnet-0ffd901c71aa53b08"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "rtbassoc-01fa2f8f600c8c7fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.route_table.aws_route_table.public",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:security-group/sg-06f842c929c71d51f",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f842c929c71d51f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "prod",
            "name_prefix": "",
            "owner_id": "998230061098",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "sg-06f842c929c71d51f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:internet-gateway/igw-06c4bc4dc00bda581",
            "id": "igw-06c4bc4dc00bda581",
            "owner_id": "998230061098",
            "region": "us-east-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-00f9bf379366e73be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "igw-06c4bc4dc00bda581",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998230061098:vpc/vpc-00f9bf379366e73be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d63ca72c81015f84",
            "default_route_table_id": "rtb-0aecc0666580d9270",
            "default_security_group_id": "sg-08d426a1af552290e",
            "dhcp_options_id": "dopt-00a4df450a575438e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f9bf379366e73be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aecc0666580d9270",
            "owner_id": "998230061098",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "998230061098",
            "id": "vpc-00f9bf379366e73be",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}